exam-app/templates/service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-pgadmin
  namespace: standard
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32080
      protocol: TCP
      name: exam-pgadmin
  selector:
    app: exam-pgadmin
